--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -22,8 +22,8 @@
 
 
 <!-- Custom Favicon -->
-<link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/logo2.png"/>
-<link rel="icon" type="image/png" href="{{ base_path }}/images/logo2.png"/>
+<link rel="apple-touch-icon" sizes="180x180" href="{{ base_path }}/images/jo.jpg"/>
+<!-- <link rel="icon" type="image/png" href="{{ base_path }}/images/logo2.png"/> -->
 <link rel="manifest" href="{{ base_path }}/images/manifest.json"/>
 <meta name="theme-color" content="#ffffff"/>
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
